--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -7,14 +7,29 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Create a text file
-      run: echo "Hello, world!" > hello.txt
+      - name: Create a text file
+        run: echo "Hello, world!" > hello.txt
 
-    - name: Archive text file
-      uses: actions/upload-artifact@v4
-      with:
-        name: hello-artifact
-        path: hello.txt
+      - name: Archive text file
+        uses: actions/upload-artifact@v4
+        with:
+          name: hello-artifact
+          path: hello.txt
+
+  download:
+    name: Download Artifact and Display
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: hello-artifact
+          path: ./artifacts
+
+      - name: Display file content
+        run: cat ./artifacts/hello.txt
