--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -1,35 +1,37 @@
 name: Workflow Demo
 
-on: [push]
+on:
+  push:
+    branches:
+      - main  # Adjust as needed. This triggers the workflow on pushes to the 'main' branch.
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v4
 
-      - name: Create a text file
-        run: echo "Hello, world!" > hello.txt
+    - name: Create a text file
+      run: 'echo "Hello, world!" > hello.txt'
 
-      - name: Archive text file
-        uses: actions/upload-artifact@v4
-        with:
-          name: hello-artifact
-          path: hello.txt
+    - name: Archive text file
+      uses: actions/upload-artifact@v4
+      with:
+        name: hello-artifact
+        path: hello.txt
 
-  download:
-    name: Download Artifact and Display
-    runs-on: ubuntu-latest
+  download:  # This job runs after 'build' job completes
     needs: build
+    runs-on: ubuntu-latest
 
     steps:
-      - name: Download artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: hello-artifact
-          path: ./artifacts
+    - name: Download text file
+      uses: actions/download-artifact@v4
+      with:
+        name: hello-artifact
+        path: ./artifacts
 
-      - name: Display file content
-        run: cat ./artifacts/hello.txt
+    - name: Display content of the text file
+      run: cat ./artifacts/hello.txt
